--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
-theme: jekyll-theme-minimal
+remote_theme: "mmistakes/minimal-mistakes"
+url: "https://simonharrer.com" # the base hostname & protocol for your site
+plugins:
+  - jekyll-sitemap
