--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   facebook         : "simonharrer"
   foursquare       :
   github           : "simonharrer"
-  gitlab           : "simonharrer"
+  gitlab           : "simon.harrer"
   google_plus      :
   keybase          :
   instagram        :
@@ -36,10 +36,10 @@ author:
   linkedin         : # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
   pinterest        :
   soundcloud       :
-  stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
+  stackoverflow    : # "428536/simonh" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
-  twitter          : "simonharrer"
+  twitter          : "https://twitter.com/simonharrer"
   vine             :
   weibo            :
   xing             : "Simon_Harrer"
