--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ words_per_minute         : 200
 # Site Author
 author:
   name             : "Dr. Simon Harrer"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "avatar-simon.jpg"
   bio              : "I am an amazing person."
   location         : "Bamberg, Germany"
   email            : "simon.harrer@gmail.com"
@@ -33,10 +33,10 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
+  linkedin         : "simonharrer" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
   pinterest        :
   soundcloud       :
-  stackoverflow    : # "428536/simonh" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
+  stackoverflow    : "428536/simonh" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
   twitter          : "https://twitter.com/simonharrer"
