--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ words_per_minute         : 200
 author:
   name : "Dr. Simon Harrer"
   avatar           : "/simon-avatar.jpg"
-  bio              : "I am an amazing person."
+  bio              : "Likes writing clean code."
   location         : "Bamberg, Germany"
   email            : "simon.harrer@gmail.com"
   uri              :
