--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ author:
   stackoverflow    : "428536/simonh"
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
-  twitter          : "https://twitter.com/simonharrer"
+  twitter          : "simonharrer"
   vine             :
   weibo            :
   xing             : "Simon_Harrer"
