--- a/_config.yml
+++ b/_config.yml
@@ -38,17 +38,17 @@ author:
   avatar           : "/simon-avatar.jpg"
   bio              : "Likes writing clean code."
   location         : "Bamberg, Germany"
-  email            : "simon.harrer@gmail.com"
+#  email            : "simon.harrer@gmail.com"
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "simonharrer"
+  # facebook         : "simonharrer"
   foursquare       :
   github           : "simonharrer"
-  gitlab           : "simon.harrer"
+  # gitlab           : "simon.harrer"
   google_plus      :
   keybase          :
   instagram        :
@@ -56,11 +56,11 @@ author:
   linkedin         : "simonharrer" 
   pinterest        :
   soundcloud       :
-  stackoverflow    : "428536/simonh"
+  # stackoverflow    : "428536/simonh"
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
   twitter          : "simonharrer"
   vine             :
   weibo            :
-  xing             : "Simon_Harrer"
+ #  xing             : "Simon_Harrer"
   youtube          : # "https://youtube.com/c/MichaelRoseDesign"
