--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ defaults:
       path: ""
       type: pages
     values:
-      author_profile: true
+      layout: single
 
 # Site Author
 author:
