--- a/stuff.yml
+++ b/stuff.yml
@@ -65,3 +65,25 @@ author:
   weibo            :
  #  xing             : "Simon_Harrer"
   youtube          : # "https://youtube.com/c/MichaelRoseDesign"
+
+
+            <li>
+              <a href="https://www.innoq.com/en/staff/dr-simon-harrer/">
+                  <img src="/innoq.svg" style="width: 15px" /> INNOQ
+              </a>
+          </li>
+          <li>
+              <a href="https://java.by-comparison.com/">
+                  <i class="fas fa-book" aria-hidden="true"></i> Java by Comparison
+              </a>
+          </li>
+          <li>
+              <a href="https://www.amazon.com/Simon-Harrer/e/B07942J993/">
+                  <i class="fab fa-amazon" aria-hidden="true"></i> Amazon
+              </a>
+          </li>
+          <li>
+              <a href="https://www.goodreads.com/author/show/17847059.Simon_Harrer">
+                  <i class="fab fa-goodreads" aria-hidden="true"></i> Goodreads
+              </a>
+          </li>
